--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <form>
         <p>create-user works!</p>
         <div>
@@ -10,14 +10,51 @@
             <input class="form-control" placeholder="password" id="password" type="password" [formControl]="password">
         </div>
         <div>
-            <button class="btn btn-primary" (click)="authService.SignUp(email.value!, password.value!)">Create User!</button>
+            <button class="btn btn-primary" (click)="createUser()">Create User!</button>
         </div>
     </form>
+</div> -->
+<div class="card text-center col-sm-6 col-lg-6 col-12 mx-auto">
+    <div class="card-body">
+        <h2 class="fw-bold mb-2 text-uppercase">Create Account</h2>
+        <p class="text-dark-50 mb-4">Please enter your login and password!</p>
+
+        <div class="form-outline form-dark mb-3">
+        <label class="form-label" for="email">Email</label>
+        <input type="email" class="form-control form-control-lg" placeholder="Email" id="email" type="email" [formControl]="email"/>
+        </div>
+
+        <div class="form-outline form-dark">
+        <label class="form-label" for="password">Password</label>
+        <input type="password" class="form-control form-control-lg" placeholder="Password" id="password" type="password" [formControl]="password"/>
+        </div>
+
+        <div class="form-outline form-dark">
+            <label class="form-label" for="password">First Name</label>
+            <input type="password" class="form-control form-control-lg" placeholder="First Name" id="password" type="password" />
+        </div>
+        <div class="form-outline form-dark">
+            <label class="form-label" for="password">Last Name</label>
+            <input type="password" class="form-control form-control-lg" placeholder="Last Name" id="password" type="password" />
+        </div>
+        <div class="form-outline form-dark">
+            <label class="form-label" for="password">Address</label>
+            <input type="password" class="form-control form-control-lg" placeholder="Address" id="password" type="password" />
+        </div>
+        <div class="form-outline form-dark">
+            <label class="form-label" for="password">Description</label>
+            <input type="password" class="form-control form-control-lg" placeholder="Description" id="password" type="password" />
+        </div>
+        <div class="form-outline form-dark">
+            <label class="form-label" for="password">Phone Number</label>
+            <input type="password" class="form-control form-control-lg" placeholder="Phone Number" id="password" type="password" />
+            <label class="form-label" for="password"></label>
+        </div>
+
+        <button class="btn btn-outline-dark btn-lg px-5" type="button" (click)="createUser()">Create</button> 
+    </div>
+    <div class="card-footer text-body-secondary">
+        <p class="mb-0">Already have an account? <a routerLink="/login" class="text-dark-50 fw-bold">Login</a>
+        </p>
+    </div>
 </div>
-
-<!-- <label for="email" clas="form-label">Email: </label>
-<input class="form-control" placeholder="email" id="email" type="email" [formControl]="email">
-
-<label for="password" clas="form-label">Name: </label>
-<input class="form-control" placeholder="password" id="password" type="password" [formControl]="password">
-<button class="btn btn-primary" (click)="createUser()">Create User!</button> -->
