add crimes menu

--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -38,17 +38,12 @@
             <input type="password" class="form-control form-control-lg" placeholder="Last Name" id="password" type="password" />
         </div>
         <div class="form-outline form-dark">
-            <label class="form-label" for="password">Address</label>
+            <label class="form-label" for="password">Structure</label>
             <input type="password" class="form-control form-control-lg" placeholder="Address" id="password" type="password" />
         </div>
         <div class="form-outline form-dark">
-            <label class="form-label" for="password">Description</label>
+            <label class="form-label" for="password">Birth Year</label>
             <input type="password" class="form-control form-control-lg" placeholder="Description" id="password" type="password" />
-        </div>
-        <div class="form-outline form-dark">
-            <label class="form-label" for="password">Phone Number</label>
-            <input type="password" class="form-control form-control-lg" placeholder="Phone Number" id="password" type="password" />
-            <label class="form-label" for="password"></label>
         </div>
 
         <button class="btn btn-outline-dark btn-lg px-5" type="button" (click)="createUser()">Create</button> 
