add user management read all

--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -1,1 +1,7 @@
-<p>user-management works!</p>
+<div class="list-group">
+    <div *ngFor="let user of users">
+        <a href="" class="list-group-item list-group-item-action menu-item">
+            {{user.email}}, {{user.id}}
+        </a>
+    </div>
+</div>
