--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -175,6 +175,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-bs-dismiss="offcanvas">Privacy Policy</a>
                     </li>
+                    <li class="nav-item">
+                        <button class="nav-link" (click)="logout()" data-bs-dismiss="offcanvas">Logout</button>
+                    </li>
                 </ul>
             </div>
         </div>
