update user experience

--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -42,6 +42,9 @@
                 {{user.birthYear}}
                 {{getAge(user.birthYear)}}
             </div>
+            <div>
+                {{user.state}}
+            </div>
         </div>
       </div>
     </div>
