--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,15 @@
-<div class="page-title">
-
-</div>
-
 <div class="card text-center mx-auto" style="width: 20rem;">
+    <div *ngIf="shouldShowWarning()" class="alert alert-warning">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </svg>
+      <div>
+        User is still waiting for activation
+      </div>
+    </div>
     <img src="assets/images/logo.png" class="card-img-top" alt="logo">
     <div class="card-body">
-      <h5 class="card-title">Bine ai venit</h5>
+      <h5 class="card-title">Bine ai venit, {{getUserState()}}</h5>
       <p class="card-text">Foloseste meniul din dreapta sus pentru navigare</p>
     </div>
 </div>
