--- a/src/app/components/sanctions/sanctions.component.html
+++ b/src/app/components/sanctions/sanctions.component.html
@@ -1,6 +1,9 @@
 <div class="page-title">
     <h1>{{ 'menu.sanctions' | transloco }}</h1>
 </div>
+
+<!-- <app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list> -->
+
 <div class="list-group">
     <div class="accordion-item list-group-item list-group-item-action">
         <a class="accordion-button menu-item" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
