update all data, add tiaf

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
     </div>
     <img src="assets/images/logo.png" class="card-img-top" alt="logo">
     <div class="card-body">
-      <h5 class="card-title">Bine ai venit, {{getUserState()}}</h5>
+      <h5 class="card-title">Bine ai venit</h5>
       <p class="card-text">Foloseste meniul din dreapta sus pentru navigare</p>
     </div>
 </div>
