--- a/src/app/components/country-navigation/country-navigation.component.html
+++ b/src/app/components/country-navigation/country-navigation.component.html
@@ -11,7 +11,7 @@
 <div class="container country-content">
     <ul class="list-unstyled row">
         <li *ngFor="let navigationCountry of navigationCountries" class="list-item border-top py-2">
-            <a class="nav-link" href="{{navigationCountry.url}}">
+            <a class="nav-link" href="{{navigationCountry.url}}" target="_blank">
                 <h3>
                     <span class="fi fi-{{navigationCountry.countryCode}}"></span>
                     {{navigationCountry.country}}
