--- a/src/app/components/sanction-details/sanction-details.component.html
+++ b/src/app/components/sanction-details/sanction-details.component.html
@@ -4,9 +4,9 @@
 
 <div class="card">
     <div class="card-header bg-white">
-       <h3> {{selectedSanction.title}} </h3>
+       <h3> {{selectedLaw.title}} </h3>
     </div>
     <div class="card-body bg-light">
-        <pre>{{selectedSanction.text}}</pre>
+        <pre>{{selectedLaw.text}}</pre>
     </div>
   </div>
