--- a/src/app/components/sanctions/sanctions.component.html
+++ b/src/app/components/sanctions/sanctions.component.html
@@ -2,9 +2,9 @@
     <h1>{{ 'menu.sanctions' | transloco }}</h1>
 </div>
 
-<!-- <app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list> -->
+<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
 
-<div class="list-group">
+<!-- <div class="list-group">
     <div class="accordion-item list-group-item list-group-item-action">
         <a class="accordion-button menu-item" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
             aria-expanded="false" aria-controls="flush-collapseOne">
@@ -27,7 +27,7 @@
                     </svg>
                     DESCHIDE ACTUL NORMATIV
                 </a>
-                <a [routerLink]="['details', '1']" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '1.1']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -37,7 +37,7 @@
                     </svg>
                     Carte de identitate expirată
                 </a>
-                <a [routerLink]="['details', '2']" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '1.2']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -47,7 +47,7 @@
                     </svg>
                     Carte de identitate pierdută/furată
                 </a>
-                <a [routerLink]="['details', '3']" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '1.3']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -57,7 +57,7 @@
                     </svg>
                     Carte de identitate deteriorată/distrusă
                 </a>
-                <a [routerLink]="['details', '4']" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '1.4']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -67,7 +67,7 @@
                     </svg>
                     Modificări adăugiri în actul de identitate
                 </a>
-                <a [routerLink]="['details', '5']" class="list-group-item list-group-item-action">
+                <a [routerLink]="['details', '1.5']" class="list-group-item list-group-item-action">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         class="bi bi-link-45deg" viewBox="0 0 16 16">
                         <path
@@ -150,7 +150,7 @@
         </svg>
         Deținere/comercializare tutun sau alcool
     </a>
-    <a href="#" class="list-group-item list-group-item-action list-group-item-info menu-item">
+    <a href="https://calculator-termene.ro/" class="list-group-item list-group-item-action list-group-item-info menu-item">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-calculator-fill"
             viewBox="0 0 16 16">
             <path
@@ -158,4 +158,4 @@
         </svg>
         Calculator termene judiciare
     </a>
-</div>
+</div> -->
