add crimes, update links

--- a/src/app/components/tiaf/tiaf.component.html
+++ b/src/app/components/tiaf/tiaf.component.html
@@ -3,3 +3,4 @@
 </div>
 
 <app-url-navigation [contentFileName]="contentFileName"></app-url-navigation>
+<!-- <app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list> -->
