--- a/src/app/components/crimes/crimes.component.html
+++ b/src/app/components/crimes/crimes.component.html
@@ -1,1 +1,5 @@
-<p>crimes works!</p>
+<div class="page-title">
+    <h1>{{ 'menu.crimes' | transloco }}</h1>
+</div>
+
+<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
