--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,5 +21,7 @@
     <div class="card-footer text-body-secondary">
         <p class="mb-0">Don't have an account? <a routerLink="/create-user" class="text-dark-50 fw-bold">Register</a>
         </p>
+        <p class="mb-0">Forgot Password? <a routerLink="/reset-password" class="text-dark-50 fw-bold">Reset Password</a>
+        </p>
     </div>
 </div>
