--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,5 +22,6 @@
       <h5 class="card-title">Bine ai venit, {{getUserName()}}</h5>
       <p class="card-text">Foloseste meniul din dreapta sus pentru navigare</p>
       <a *ngIf="shouldShowLoginButton()" class="btn btn-secondary" routerLink="/login">Login</a>
+      <a class="btn btn-warning" [routerLink]="['/update-user', getUserId()]">Update Profile</a>
     </div>
 </div>
