--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -5,9 +5,31 @@
         </a>
     </div>
 </div> -->
+<div class="input-group py-2">
+    <span class="input-group-text" id="basic-addon1">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+        </svg>
+    </span>
+    <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example" aria-describedby="basic-addon1"
+    (input)="onSearchChange($event)">
+  </div>
+<div class="btn-group py-2" role="group" aria-label="Basic radio toggle button group">
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" 
+    (click)="selectState(stateEnum.Active)">
+    <label class="btn btn-outline-primary" for="btnradio1">Activi</label>
+  
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off"
+    (click)="selectState(stateEnum.Pending)" checked>
+    <label class="btn btn-outline-primary" for="btnradio2">în așteptare</label>
+  
+    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off"
+    (click)="selectState(stateEnum.Inactive)">
+    <label class="btn btn-outline-primary" for="btnradio3">Inactivi</label>
+</div>
 
 <div class="accordion" id="'accordionUsers'">
-    <div *ngFor="let user of users" class="accordion-item">
+    <div *ngFor="let user of filteredUsers" class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button collapsed" 
             type="button" 
