--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -45,33 +45,62 @@
             <span *ngIf="user.state===stateEnum.Inactive" class="p-2 bg-danger border border-light rounded-circle"> 
             </span>
             {{user.firstName + ' ' + user.lastName}}
+            <span *ngIf="user.historicalUser" class="text-right text-warning">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+            </span>
         </button>
       </h2>
       <div id="collapseOne{{user.id}}" class="accordion-collapse collapse " 
         aria-labelledby="headingOne" 
         [attr.data-bs-parent]="'#accordionUsers'">
         <div class="accordion-body">
-            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio{{user.id}}" id="btnradio1{{user.id}}" autocomplete="off" [checked]="getCurrentUserActiveState(user)" (click)="changeUserState(user, stateEnum.Active)">
-                <label class="btn btn-outline-success" for="btnradio1{{user.id}}">Active</label>
-            
-                <input type="radio" class="btn-check" name="btnradio{{user.id}}" id="btnradio2{{user.id}}" autocomplete="off" [checked]="!getCurrentUserActiveState(user)" (click)="changeUserState(user, stateEnum.Inactive)">
-                <label class="btn btn-outline-secondary" for="btnradio2{{user.id}}">Inactive</label>
-            </div>
-            <div>
-                <strong>{{user.email}}</strong> 
-            </div>
-            <div>
-                {{user.structure}}
-            </div>
-            <div>
-                {{user.sex === true ? 'Male' : 'Female'}}
-            </div>
-            <div>
-                {{user.birthYear}}
-            </div>
-            <div>
-                {{getAge(user.birthYear)}}
+            <div class="card">
+                <div class="card-header">
+                    <div class="py-2">
+                        <div class="btn-group" role="group" aria-label="Basic radio toggle button group py-2">
+                            <input type="radio" class="btn-check" name="btnradio{{user.id}}" id="btnradio1{{user.id}}" autocomplete="off" [checked]="getCurrentUserActiveState(user)" (click)="changeUserState(user, stateEnum.Active)">
+                            <label class="btn btn-outline-success" for="btnradio1{{user.id}}">Active</label>
+                        
+                            <input type="radio" class="btn-check" name="btnradio{{user.id}}" id="btnradio2{{user.id}}" autocomplete="off" [checked]="!getCurrentUserActiveState(user)" (click)="changeUserState(user, stateEnum.Inactive)">
+                            <label class="btn btn-outline-secondary" for="btnradio2{{user.id}}">Inactive</label>
+                        </div>
+                        <button type="button" class="btn btn-info float-end" (click)="showHistoryForId(user.id)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
+                                <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.79a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.976 7.976 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-.401.432l-.707-.707z"></path>
+                                <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z"></path>
+                                <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"></path>
+                            </svg>
+                          </button>
+                    </div>
+                </div>
+
+                <div class="card-body">
+                    <h5 class="card-title"><strong>{{user.email}}</strong> </h5>
+                    <div>
+                        {{user.structure}}
+                    </div>
+                    <div>
+                        {{user.sex === true ? 'Male' : 'Female'}}
+                    </div>
+                    <div>
+                        {{user.birthYear}}
+                    </div>
+                    <div>
+                        {{getAge(user.birthYear)}}
+                    </div>
+                </div>
+                <div *ngIf="user.historicalUser && selectedIdForShowingHistory === user.id" class="card-footer border-info history-footer">
+                    <div><strong>Istoric ({{user.historicalUser.timestamp | date: 'dd.MM.yyyy'}})</strong></div>
+                    <div>{{user.historicalUser.structure}}</div>
+                    <div>{{user.historicalUser.sex === true ? 'Male' : 'Female'}}</div>
+                    <div>{{user.historicalUser.birthYear}}</div>
+                    <div>{{getAge(user.historicalUser.birthYear)}}</div>
+                </div>
+                <div *ngIf="!user.historicalUser && selectedIdForShowingHistory === user.id" class="card-footer border-info history-footer">
+                    <p>No History</p>
+                </div>
             </div>
         </div>
       </div>
