--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -11,7 +11,7 @@
         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
         </svg>
     </span>
-    <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example" aria-describedby="basic-addon1"
+    <input type="text" class="form-control" placeholder="Caută" aria-label="Input group example" aria-describedby="basic-addon1"
     (input)="onSearchChange($event)">
   </div>
 <div class="btn-group py-2" role="group" aria-label="Basic radio toggle button group">
