--- a/src/app/components/tiaf/tiaf.component.html
+++ b/src/app/components/tiaf/tiaf.component.html
@@ -2,5 +2,4 @@
     <h1>{{ 'menu.tiaf' | transloco }}</h1>
 </div>
 
-<app-url-navigation [contentFileName]="contentFileName"></app-url-navigation>
-<!-- <app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list> -->
+<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
