update specimens with translations

--- a/src/app/components/specimens/specimens.component.html
+++ b/src/app/components/specimens/specimens.component.html
@@ -2,4 +2,6 @@
     <h1>{{ 'menu.specimens' | transloco }}</h1>
 </div>
 
-<app-url-navigation [contentFileName]="contentFileName"></app-url-navigation>
+<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
+
+<!-- <app-url-navigation [contentFileName]="contentFileName"></app-url-navigation> -->
